<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <Button
        android:layout_height="30dp"
        android:layout_width="80dp"
        android:id="@+id/new_game_button"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/newGameColor"
        android:text="@string/new_game"
        android:textColor="@color/buttonTextColor"
        />

    <Button
        android:id="@+id/hit_button"
        style="@style/ButtonPortrait"
        android:layout_marginLeft="57dp"
        android:background="@color/hitColor"
        android:text="@string/hit"
        />

    <Button
        android:id="@+id/stand_button"
        style="@style/ButtonPortrait"
        android:layout_toRightOf="@+id/hit_button"
        android:layout_marginLeft="30dp"
        android:background="@color/standColor"
        android:text="@string/stand"
        />

</RelativeLayout>